--- a/about1.html
+++ b/about1.html
@@ -1,6 +1,15 @@
 	<!doctype html>
 <html lang="en">
   <head>
+		<!-- Global site tag (gtag.js) - Google Analytics -->
+<script async src="https://www.googletagmanager.com/gtag/js?id=G-JHXX8JNY0K"></script>
+<script>
+  window.dataLayer = window.dataLayer || [];
+  function gtag(){dataLayer.push(arguments);}
+  gtag('js', new Date());
+
+  gtag('config', 'G-JHXX8JNY0K');
+</script>
     <!-- Required meta tags -->
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
@@ -57,17 +66,17 @@
 		<div class="row">
 			<div class="col-lg-6 col-0">
 				<section id="bg-img">
-					<img style="height: auto;" src="images/plantation2.gif">
+					<img style="height: auto;" src="notes/images/IMG_4808.JPG">
 				</section>
 			</div>
 			<div class="col-lg-6 col-12">
 				<section>
 					<div class="text-white text-center">
 						<h1 class="heading">School of Engineering Society <br> Far western University</h1>
+						<br>
 						<p>The School of Engineering Society (SOES)) Club is dedicated to promoting the STEM field, specifically Civil & computer Engineering. We work to provide resources for any student, alumni, and professionals regardless of an individual's degree of knowledge or commitment in the field of Engineering. SOES meetings and hosts events that provide opportunities for networking, educational, and professional development related to computer & Civil Engineering. Our mission is to provide students with the skills, resources, motivation, and training necessary to become successful leaders in STEM.</p>
-						<div id="btndiv" class="text-center">
-							
-							<button  class="btn mybtn" ><b> <link rel="stylesheet" href="https://docs.google.com/forms/d/e/1FAIpQLScdFrJ8y-dtQ10W7aS0q3pGH0ts0rvx65R2jjYxXaMKq2kgJg/viewform?usp=sf_link"> Contact Us<b></button>
+						<div id="btndiv" class="text-center">							
+							<button  class="btn mybtn" ><b> <link rel="stylesheet" href="#"> Contact Us<b></button>
 						</div>
 					</div>
 				</section>
@@ -78,10 +87,10 @@
 
 
 
-	<div class="container-fluid text-white py-4">
+	<div class="container-fluid text-white py-7">
 		<div class="row">
 			<div class="col-lg-5 col-12">
-				<img src="images/3rd team of SOES.jpg" style="width: 100%;height:40vh;">
+				<img src="notes/images/IMG_4823.JPG" style="width: 80%; height:40vh;">
 			</div>
 			<div class="col-lg-5">
 				<h2 class="text-center">About Us</h2>
@@ -91,6 +100,7 @@
 	</div>
 
 	
+	
 <!-- about our aim -->
 <div class="container-fluid py-2" id="five">
 	<div class="container col-lg-5 text-center mt-5 " style="color:rgba(0, 0, 0, 0.322);">
@@ -98,7 +108,7 @@
 		<p style=" color: #fff">We are the students let club organiztion that believes in helping BCT and BCE students succeed in the STEM field. We offer events that are aimed and designed to grow your understanding of tech and fields related skills.
 
 			Whether you're aiming to be a Software Engineer, Data Scientist, or Project Manager, we offer a community of like-minded individuals who are eager to connect and learn with others.</p>
-	</div>
+		</div>
 	</div>
 </div>
 
@@ -110,33 +120,33 @@
 		<div class="row my-3 px-3">
 			<div class="col-lg-4 col-6 my-3">
 				<div class="card">
-				  <img src="images/wallpaperflare.com_wallpaper (11).jpg" class="card-img-top img-fluid" alt="...">
+				  <img src="notes/images/IMG_4727.JPG" class="card-img-top img-fluid" alt="...">
 				</div>
 			</div>
 			<div class="col-lg-4 col-6 my-3">
 				<div class="card">
-				  <img src="images/wallpaperflare.com_wallpaper (13).jpg" class="card-img-top img-fluid" alt="...">
+				  <img src="notes/images/IMG_4728.JPG" class="card-img-top img-fluid" alt="...">
 				</div>
 			</div>
 			<div class="col-lg-4 col-6 my-3">
 				<div class="card">
-				  <img src="images/wallpaperflare.com_wallpaper (15).jpg" class="card-img-top img-fluid" alt="...">
+				  <img src="notes/images/IMG_4729.JPG" class="card-img-top img-fluid" alt="...">
 				</div>
 			</div>
 
 			<div class="col-lg-4 col-6 my-3">
 				<div class="card">
-				  <img src="images/wallpaperflare.com_wallpaper (16).jpg" class="card-img-top img-fluid" alt="...">
+				  <img src="notes/images/IMG_4823.JPG" class="card-img-top img-fluid" alt="...">
 				</div>
 			</div>
 			<div class="col-lg-4 col-6 my-3">
 				<div class="card">
-				  <img src="images/wallpaperflare.com_wallpaper (18).jpg" class="card-img-top img-fluid" alt="...">
+				  <img src="notes/images/IMG_4826.JPG" class="card-img-top img-fluid" alt="...">
 				</div>
 			</div>
 			<div class="col-lg-4 col-6 my-3">
 				<div class="card">
-				  <img src="images/wallpaperflare.com_wallpaper (9).jpg" class="card-img-top img-fluid" alt="...">
+				  <img src= "notes/images/IMG_4748.JPG" class="card-img-top img-fluid" alt="...">
 				</div>
 			</div>
 		</div>
@@ -144,7 +154,7 @@
 
 	
 
-<!-- enjoy our food -->
+<!-- SOES -->
 	<div class="container-fluid py-2" id="five">
 		<div class="container col-lg-5 text-center mt-5 " style="color:black;">
 			<h1 style=" color: rgb(113, 155, 168)">Far western university <br> School Of Engineering </h1>
@@ -283,7 +293,7 @@
 	</div>
 
 	<div id="seven">
-		<img src="images/wallpaper3.jpg">
+		<img style="height: 500px; width:100%" src="notes/images/IMG_4733.JPG">
 	</div>
 
 
