--- a/about1.html
+++ b/about1.html
@@ -90,7 +90,7 @@
 	<div class="container-fluid text-white py-7">
 		<div class="row">
 			<div class="col-lg-5 col-12">
-				<img src="notes/images/IMG_4823.JPG" style="width: 80%; height:40vh;">
+				<img src="notes/images/IMG_4808.JPG" style="width: 80%; height:40vh;">
 			</div>
 			<div class="col-lg-5">
 				<h2 class="text-center">About Us</h2>
@@ -113,46 +113,119 @@
 </div>
 
 
-
-
-<div class="container-fluid my-3 py-4 myimg">
-		<h1 class="text-white text-center">Our Photos Gallery</h1>
-		<div class="row my-3 px-3">
-			<div class="col-lg-4 col-6 my-3">
+	<!-- Introduction to our teammates -->
+	<div class="container-fluid my-3">
+		<h1 class="text-center text-white my-3 py-2">Our Gallary section</h1>
+		<div class="row mx-auto">
+			<div class="col-lg-4 col-10 mx-auto my-2">
 				<div class="card">
-				  <img src="notes/images/IMG_4727.JPG" class="card-img-top img-fluid" alt="...">
+				  <img src="notes/images/IMG_4822.JPG" class="card-img-top img-fluid" alt="...">
 				</div>
-			</div>
-			<div class="col-lg-4 col-6 my-3">
+			</div>	
+
+			<div class="col-lg-4 col-10  mx-auto my-2">
+				<div class="card">
+				  <img src="notes/images/seniurs.JPG" class="card-img-top img-fluid" alt="...">
+				</div>
+			</div>	
+
+			<div class="col-lg-4 col-10 mx-auto my-2">
+				<div class="card">
+				  <img src="notes/images/IMG_4830.JPG" class="card-img-top img-fluid" alt="...">
+				</div>
+			</div>	
+		</div>
+	</div>
+	<div class="container-fluid my-3">
+		<div class="row mx-auto">
+			<div class="col-lg-4 col-10 mx-auto my-2">
 				<div class="card">
 				  <img src="notes/images/IMG_4728.JPG" class="card-img-top img-fluid" alt="...">
 				</div>
-			</div>
-			<div class="col-lg-4 col-6 my-3">
-				<div class="card">
-				  <img src="notes/images/IMG_4729.JPG" class="card-img-top img-fluid" alt="...">
-				</div>
-			</div>
+			</div>	
 
-			<div class="col-lg-4 col-6 my-3">
+			<div class="col-lg-4 col-10  mx-auto my-2">
 				<div class="card">
-				  <img src="notes/images/IMG_4823.JPG" class="card-img-top img-fluid" alt="...">
+				  <img src="notes/images/IMG_4729.JPG" class="card-img-top img-fluid" alt="...">				  
 				</div>
-			</div>
-			<div class="col-lg-4 col-6 my-3">
+			</div>	
+
+			<div class="col-lg-4 col-10 mx-auto my-2">
 				<div class="card">
-				  <img src="notes/images/IMG_4826.JPG" class="card-img-top img-fluid" alt="...">
+				  <img src="notes/images/IMG_4823.JPG" class="card-img-top img-fluid" alt="...">			  
 				</div>
-			</div>
-			<div class="col-lg-4 col-6 my-3">
+			</div>	
+		</div>
+	</div>	
+	<div class="container-fluid my-3">
+		<div class="row mx-auto">
+			<div class="col-lg-4 col-10 mx-auto my-2">
 				<div class="card">
-				  <img src= "notes/images/IMG_4748.JPG" class="card-img-top img-fluid" alt="...">
+				  <img src="notes/images/IMG_4825.JPG" class="card-img-top img-fluid" alt="...">			  
 				</div>
-			</div>
+			</div>	
+
+			<div class="col-lg-4 col-10  mx-auto my-2">
+				<div class="card">
+				  <img src="notes/images/IMG_4828.JPG" class="card-img-top img-fluid" alt="...">				  
+				</div>
+			</div>	
+
+			<div class="col-lg-4 col-10 mx-auto my-2">
+				<div class="card">
+				  <img src="notes/images/IMG_4826.JPG" class="card-img-top img-fluid" alt="...">			 
+				</div>
+			</div>	
+		</div>
+	</div>
+	<div class="container-fluid my-3">
+		<div class="row mx-auto">
+			<div class="col-lg-4 col-10 mx-auto my-2">
+				<div class="card">
+				  <img src="notes/images/IMG_4744.JPG" class="card-img-top img-fluid" alt="...">			  
+				</div>
+			</div>	
+
+			<div class="col-lg-4 col-10  mx-auto my-2">
+				<div class="card">
+				  <img src="notes/images/IMG_4745.JPG" class="card-img-top img-fluid" alt="...">				  
+				</div>
+			</div>	
+
+			<div class="col-lg-4 col-10 mx-auto my-2">
+				<div class="card">
+				  <img src="notes/images/IMG_4748.JPG" class="card-img-top img-fluid" alt="...">			 
+				</div>
+			</div>	
 		</div>
 	</div>
 
-	
+	<!-- new row -->
+	<div class="container-fluid my-3">
+		<div class="row mx-auto">
+			<div class="col-lg-4 col-10 mx-auto my-2">
+				<div class="card">
+				  <img src="notes/images/IMG_4825.JPG" class="card-img-top img-fluid" alt="...">			  
+				</div>
+			</div>	
+
+			<div class="col-lg-4 col-10  mx-auto my-2">
+				<div class="card">
+				  <img src="notes/images/IMG_4828.JPG" class="card-img-top img-fluid" alt="...">				  
+				</div>
+			</div>	
+
+			<div class="col-lg-4 col-10 mx-auto my-2">
+				<div class="card">
+				  <img src="notes/images/IMG_4812.JPG" class="card-img-top img-fluid" alt="...">			 
+				</div>
+			</div>	
+		</div>
+	</div>
+
+
+
+
 
 <!-- SOES -->
 	<div class="container-fluid py-2" id="five">
