--- a/about1.html
+++ b/about1.html
@@ -1,4 +1,4 @@
-	<!doctype html>
+<!doctype html>
 <html lang="en">
   <head>
 		<!-- Global site tag (gtag.js) - Google Analytics -->
@@ -24,18 +24,18 @@
   </head>
   <body>
 	<header id="firsthead" class="py-1">
-		<nav class="navbar navbar-expand-lg navbar-light">
-		  <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation" style="color: #fff; background: orange;">
+		<nav  class="navbar navbar-expand-lg navbar-light">
+		  <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation" style="color: rgb(57, 243, 0); background: orange;">
 		    <span class="navbar-toggler-icon"></span>
 		  </button>
 
-		  <div class="collapse navbar-collapse" id="navbarSupportedContent">
+		  <div  class="collapse navbar-collapse" id="navbarSupportedContent">
 		    <ul class="navbar-nav m-auto">
 		      <li class="nav-item active">
 		        <a class="nav-link" href="index.html">Home</a>
 		      </li>
 		      <li class="nav-item">
-		        <a class="nav-link" href="about1.html">About</a>
+		        <a class="nav-link" href="about1.html">About SOES</a>
 		      </li>
 		      <li class="nav-item">
 		        <a class="nav-link" href="https://www.facebook.com/permalink.php?story_fbid=pfbid0wzoYyrrn2qirxaP6jzjTn56CMQxU9eXmTBdVzkSJMzkDFJzn1if8obfAjpqWoZYEl&id=112105471510341">News and Notices</a>
@@ -45,9 +45,9 @@
 		      </li>
 		    </ul>
 		  </div>
-		  	<!-- <div id="imgbox">
-				<img src="images/bg2.png">
-			</div> -->
+		  	<div id="imgbox">
+				<img style="width:80px ;" src="images/logo1.png">
+			</div>
 		  <div class="collapse navbar-collapse" id="navbarSupportedContent">
 		    <ul class="navbar-nav m-auto">
 		      <li class="nav-item active">
@@ -57,7 +57,7 @@
 		        <a class="nav-link" href="contact.html">Contact</a>
 		      </li>
 		      <li class="nav-item">
-		        <a class="nav-link" href="constitution.html">Blog</a>
+		        <a class="nav-link" href="constitution.html">Constitution</a>
 		      </li>
 		    </ul>
 		  </div>
@@ -66,17 +66,17 @@
 		<div class="row">
 			<div class="col-lg-6 col-0">
 				<section id="bg-img">
-					<img style="height: auto;" src="notes/images/IMG_4808.JPG">
+					<img style="height: auto;" src="notes/images/IMG_4809.JPG">
 				</section>
 			</div>
 			<div class="col-lg-6 col-12">
 				<section>
-					<div class="text-white text-center">
-						<h1 class="heading">School of Engineering Society <br> Far western University</h1>
+					<divclass="text-white text-center">
+						<h1  style="color: rgb(140, 255, 0);"  class="heading">School of Engineering Society <br> Far western University</h1>
 						<br>
-						<p style="font-size: 20px;">The School of Engineering Society (SOES)) Club is dedicated to promoting the STEM field, specifically Civil & computer Engineering. We work to provide resources for any student, alumni, and professionals regardless of an individual's degree of knowledge or commitment in the field of Engineering. SOES meetings and hosts events that provide opportunities for networking, educational, and professional development related to computer & Civil Engineering. Our mission is to provide students with the skills, resources, motivation, and training necessary to become successful leaders in STEM.</p>
+						<p style="font-family: 'Times New Roman', Times, serif; font-size: 20px; color: black; ">The School of Engineering Society (SOES)) Club is dedicated to promoting the STEM field, specifically Civil & computer Engineering. We work to provide resources for any student, alumni, and professionals regardless of an individual's degree of knowledge or commitment in the field of Engineering. SOES meetings and hosts events that provide opportunities for networking, educational, and professional development related to computer & Civil Engineering. Our mission is to provide students with the skills, resources, motivation, and training necessary to become successful leaders in STEM.</p>
 						<div id="btndiv" class="text-center">							
-							<button  class="btn mybtn" ><b> <link rel="stylesheet" href="#"> Contact Us<b></button>
+							<!-- <button  class="btn mybtn" ><b> <link rel="stylesheet" href="#"> Contact Us<b></button> -->
 						</div>
 					</div>
 				</section>
@@ -87,14 +87,14 @@
 
 
 
-	<div class="container-fluid text-white py-7">
+	<div  class="container-fluid text-white py-7">
 		<div class="row">
 			<div class="col-lg-5 col-12">
-				<img src="notes/images/IMG_4808.JPG" style="width: 80%; height:40vh;">
+				<img src="notes/images/IMG_4728.JPG" style="width: 80%; height:40vh;">
 			</div>
 			<div class="col-lg-5">
-				<h2 class="text-center">Our Aim</h2>
-				<p style="font-family: 'Times New Roman', Times, serif; font-size: 20px;">We aim to help every individual grow as a person and as as tech professional to feel confident in their tech skills once they graduate. On top of that, we are a community of like-minded individuals who are eager to network and succeed. Come join us at the SOES Club at Far western University.</p>
+				<h2 style=" font-size: 40px; color: rgb(45, 197, 19);" class="text-center">Our Motto</h2>
+				<p style="font-family: 'Times New Roman', Times, serif; font-size: 20px; color: black;">We aim to help every individual grow as a person and as as tech professional to feel confident in their tech skills once they graduate. On top of that, we are a community of like-minded individuals who are eager to network and succeed. Come join us at the SOES Club at Far western University.</p>
 			</div>
 		</div>
 	</div>
@@ -104,8 +104,8 @@
 <!-- about our aim -->
 <div class="container-fluid py-2" id="five">
 	<div class="container col-lg-5 text-center mt-5 " style="color:rgba(0, 0, 0, 0.322);">
-		<h1 style=" color: rgb(113, 155, 168)">Our Aim</h1>
-		<p style="color: #fff; font-family: 'Times New Roman', Times, serif; font-size: 20px;">We are the students let club organiztion that believes in helping BCT and BCE students succeed in the STEM field. We offer events that are aimed and designed to grow your understanding of tech and fields related skills.
+		<h1 style=" color: rgb(54, 224, 41)">Our Aim</h1>
+		<p style="color: rgb(3, 3, 3); font-family: 'Times New Roman', Times, serif; font-size: 20px;">We are the students let club organiztion that believes in helping BCT and BCE students succeed in the STEM field. We offer events that are aimed and designed to grow your understanding of tech and fields related skills.
 
 			Whether you're aiming to be a Software Engineer, Data Scientist, or Project Manager, we offer a community of like-minded individuals who are eager to connect and learn with Creative minds.</p>
 		</div>
@@ -114,31 +114,17 @@
 
 
 	<!-- Introduction to our teammates -->
-	<div class="container-fluid my-3">
-		<h1 class="text-center text-white my-3 py-2">Our Gallery section</h1>
-		<hr style="color: rgb(251, 251, 251); height: 65px; width: 80%;">
+	<div style="margin-left: 5px;" class="container-fluid my-2">
+		<h1 style="color: rgb(69, 205, 23);" class="text-center my-3 py-2">Our Gallery section</h1>
+		<hr style="color: rgb(0, 0, 0); height: 65px; width: 80%;">
 		<div class="row mx-auto">
-			<div class="col-lg-4 col-10 mx-auto my-2">
-				<div class="card">
-				  <img src="notes/images/IMG_4741.JPG" class="card-img-top img-fluid" alt="...">
-				</div>
-			</div>	
-
-			<div class="col-lg-4 col-10  mx-auto my-2">
-				<div class="card">
-				  <img src="notes/images/seniurs.JPG" class="card-img-top img-fluid" alt="...">
-				</div>
-			</div>	
 
 			<div class="col-lg-4 col-10 mx-auto my-2">
 				<div class="card">
-				  <img src="notes/images/IMG_4830.JPG" class="card-img-top img-fluid" alt="...">
+				  <img src="notes/images/IMG_4727.JPG" class="card-img-top img-fluid" alt="...">
 				</div>
 			</div>	
-		</div>
-	</div>
-	<div class="container-fluid my-3">
-		<div class="row mx-auto">
+			
 			<div class="col-lg-4 col-10 mx-auto my-2">
 				<div class="card">
 				  <img src="notes/images/IMG_4728.JPG" class="card-img-top img-fluid" alt="...">
@@ -147,13 +133,30 @@
 
 			<div class="col-lg-4 col-10  mx-auto my-2">
 				<div class="card">
-				  <img src="notes/images/IMG_4729.JPG" class="card-img-top img-fluid" alt="...">				  
+				  <img src="notes/images/IMG_4729.JPG" class="card-img-top img-fluid" alt="...">
+				</div>
+			</div>	
+
+
+		</div>
+	</div>
+	<div class="container-fluid my-3">
+		<div class="row mx-auto">
+			<div class="col-lg-4 col-10 mx-auto my-2">
+				<div class="card">
+				  <img src="notes/images/IMG_4734.JPG" class="card-img-top img-fluid" alt="...">
+				</div>
+			</div>	
+
+			<div class="col-lg-4 col-10  mx-auto my-2">
+				<div class="card">
+				  <img src="notes/images/IMG_4734.JPG" class="card-img-top img-fluid" alt="...">				  
 				</div>
 			</div>	
 
 			<div class="col-lg-4 col-10 mx-auto my-2">
 				<div class="card">
-				  <img src="notes/images/IMG_4823.JPG" class="card-img-top img-fluid" alt="...">			  
+				  <img src="notes/images/IMG_4735.JPG" class="card-img-top img-fluid" alt="...">			  
 				</div>
 			</div>	
 		</div>
@@ -162,84 +165,80 @@
 		<div class="row mx-auto">
 			<div class="col-lg-4 col-10 mx-auto my-2">
 				<div class="card">
-				  <img src="notes/images/IMG_4825.JPG" class="card-img-top img-fluid" alt="...">			  
+				  <img src="notes/images/IMG_4739.JPG" class="card-img-top img-fluid" alt="...">			  
 				</div>
 			</div>	
 
 			<div class="col-lg-4 col-10  mx-auto my-2">
 				<div class="card">
-				  <img src="notes/images/IMG_4828.JPG" class="card-img-top img-fluid" alt="...">				  
+				  <img src="notes/images/IMG_4740.JPG" class="card-img-top img-fluid" alt="...">				  
 				</div>
 			</div>	
 
 			<div class="col-lg-4 col-10 mx-auto my-2">
 				<div class="card">
-				  <img src="notes/images/IMG_4826.JPG" class="card-img-top img-fluid" alt="...">			 
+				  <img src="notes/images/IMG_4741.JPG" class="card-img-top img-fluid" alt="...">			 
 				</div>
 			</div>	
+	
+	<div class="col-lg-4 col-10  mx-auto my-2">
+		<div class="card">
+			<img src="notes/images/IMG_4744.JPG" class="card-img-top img-fluid" alt="...">				  
 		</div>
-	</div>
-	<div class="container-fluid my-3">
-		<div class="row mx-auto">
-			<div class="col-lg-4 col-10 mx-auto my-2">
-				<div class="card">
-				  <img src="notes/images/IMG_4744.JPG" class="card-img-top img-fluid" alt="...">			  
+	</div>	
+	
+	<div class="col-lg-4 col-10 mx-auto my-2">
+		<div class="card">			 
+			<img src="notes/images/IMG_4745.JPG" class="card-img-top img-fluid" alt="...">			 
 				</div>
 			</div>	
-
+			
+			
+			<div class="col-lg-4 col-10 mx-auto my-2">
+				<div class="card">
+					<img src="notes/images/IMG_4748.JPG" class="card-img-top img-fluid" alt="...">			  
+				</div>
+			</div>	
+			
+			
+			<div class="col-lg-4 col-10 mx-auto my-2">
+				<div class="card">
+					<img src="notes/images/IMG_4808.JPG" class="card-img-top img-fluid" alt="...">			 
+				</div>
+			</div>	
+			
 			<div class="col-lg-4 col-10  mx-auto my-2">
 				<div class="card">
-				  <img src="notes/images/IMG_4745.JPG" class="card-img-top img-fluid" alt="...">				  
+					<img src="notes/images/IMG_4809.JPG" class="card-img-top img-fluid" alt="...">
 				</div>
 			</div>	
-
-			<div class="col-lg-4 col-10 mx-auto my-2">
-				<div class="card">			 
-				  <img src="notes/images/IMG_4748.JPG" class="card-img-top img-fluid" alt="...">			 
-				</div>
-			</div>	
-		</div>
-	</div>
-
-	<!-- new row -->
-	<div class="container-fluid my-3">
-		<div class="row mx-auto">
-			<div class="col-lg-4 col-10 mx-auto my-2">
-				<div class="card">
-				  <img src="notes/images/IMG_4825.JPG" class="card-img-top img-fluid" alt="...">			  
-				</div>
-			</div>	
-
+			
 			<div class="col-lg-4 col-10  mx-auto my-2">
 				<div class="card">
-				  <img src="notes/images/IMG_4828.JPG" class="card-img-top img-fluid" alt="...">				  
+					<img src="notes/images/IMG_4812.JPG" class="card-img-top img-fluid" alt="...">
 				</div>
 			</div>	
-
-			<div class="col-lg-4 col-10 mx-auto my-2">
-				<div class="card">
-				  <img src="notes/images/IMG_4812.JPG" class="card-img-top img-fluid" alt="...">			 
-				</div>
-			</div>	
-		</div>
-	</div>
+		
+</div>
+</div>
 
 
 
 
+	
 
-<!-- SOES -->
+	<!-- SOES -->
 	<div class="container-fluid py-2" id="five">
 		<div class="container col-lg-5 text-center mt-5 " style="color:black;">
-			<h1 style=" color: rgb(113, 155, 168)">Far western university <br> School Of Engineering </h1>
-			<p style=" color: #fff">  FWU has been striving to fulfill its responsibility of making higher education accessible to the people of this region. The University has begun fourteen undergraduate programs at its central campus in Mahendranagar under the five Faculties (Humanities and Social Sciences, Education, Management, Engineering, Science, and Technology). All the undergraduate courses of the university are of four-year duration. It has also started graduate programs in eight different disciplines. Recently, FWU has extended its programs in 14 constituent’s campuses in different districts of the province no 7. The FWU has recently established a Faculty of Agriculture Science at Tikapur Multiple Campus, Tikapur, Kailali and it plans to start a Bachelor of Science in Agriculture (BSc.Ag.) program from the academic year 2018/19.</p>
+			<h1 style=" color: rgb(192, 255, 57)">Far western university <br> School Of Engineering </h1>
+			<p style=" color: rgb(0, 0, 0)">  FWU has been striving to fulfill its responsibility of making higher education accessible to the people of this region. The University has begun fourteen undergraduate programs at its central campus in Mahendranagar under the five Faculties (Humanities and Social Sciences, Education, Management, Engineering, Science, and Technology). All the undergraduate courses of the university are of four-year duration. It has also started graduate programs in eight different disciplines. Recently, FWU has extended its programs in 14 constituent’s campuses in different districts of the province no 7. The FWU has recently established a Faculty of Agriculture Science at Tikapur Multiple Campus, Tikapur, Kailali and it plans to start a Bachelor of Science in Agriculture (BSc.Ag.) program from the academic year 2018/19.</p>
 		</div>
 		</div>
 	</div>
 
 	<!-- Introduction to our teammates -->
 	<div class="container-fluid my-3">
-		<h1 class="text-center text-white my-3 py-2">Our Team</h1>
+		<h1 style="color:rgb(14, 213, 61)" class="text-center my-6 py-6">Our Team</h1>
 		<div class="row mx-auto">
 			<div class="col-lg-4 col-10 mx-auto my-2">
 				<div class="card">
