--- a/index.html
+++ b/index.html
@@ -1,6 +1,8 @@
 <!DOCTYPE html>
 <html lang="en">
   <head>
+
+
 	<!-- Global site tag (gtag.js) - Google Analytics -->
 <script async src="https://www.googletagmanager.com/gtag/js?id=G-JHXX8JNY0K"></script>
 <script>
@@ -16,7 +18,7 @@
 <link rel="stylesheet" href="styles/home.css">
 <link rel="stylesheet" href="styles/contact.css">
 <script src="https://kit.fontawesome.com/5f5bb1c58f.js" crossorigin="anonymous"></script>
-<script src="global.js"></script> 
+<script src="global.js"></script>
 <meta charset="UTF-8">
 <meta name="viewport" content="width=device-width, initial-scale=1">
 <title>SOES Far western University</title>
@@ -46,7 +48,7 @@
   </head>
 
   <body>
-    <!-- Navbar starts here -->
+    <!-- Navbar starts here done  -->
     <nav style="font-size: 20px;" class="navbar navbar-expand-lg navbar-light " id="main_navbar">
       <div class="container-fluid">
         <button
@@ -294,8 +296,7 @@
 
 
 
-
-<!-- Crauser starts from here -->
+<!-- Crauser starts from here responsive done-->
 <div id="carouselExampleIndicators" class="carousel slide" data-ride="carousel">
   <ol class="carousel-indicators">
     <li data-target="#carouselExampleIndicators" data-slide-to="0" class="active"></li>
@@ -316,6 +317,7 @@
           <h1 class="text-primary text-opacity-50">SCHOOL OF ENGINEERING</h1>
         <!-- <h3 class="crausers"> SOES helps in providing skillfull and trained educators.</h3> -->
         </div>
+        
     </div>
     </div>
     </div>
@@ -338,7 +340,7 @@
 </div>
 <!-- crauser ends here -->
 
-
+<!-- cursor ends here done -->
 
 <!-- School of Engineering
 Society Club SECTION  -->
@@ -346,9 +348,9 @@ Society Club SECTION  -->
   <!-- Welcome section for deescribing about the Engineering Club -->
   <div class="welcome-flex-container">
       <div class="welcome-main-content">
-        <p class="welcome-section-title">Society of Engineering <br>Students</p>
+        <p class="welcome-section-title">School of Engineering <br>Society </p>
         <p class="welcome-section-description">
-          A community driven club with the aim of helping and providing Civil & Computer Engineering students with all the necessary skills to succeed in their career. Every semester we make it our goal to have unique events for our club members. Come and join us for one of our exciting events!
+          A community driven club with the aim of helping and providing civil & Computer Engineering students with all the necessary skills to succeed in their career. Every semester we make it our goal to have unique events for our club members. Come and join us for one of our exciting events!
           
         </p>
 
@@ -373,15 +375,14 @@ Society Club SECTION  -->
   <!-- What the club is about Section -->
   <div class="about-flex-container" >
       <div class="about-main-content">
-          <p class="about-section-title">Our Aim</p>
+          <p class="about-section-title"> SOES is About</p>
 
           <p class="about-section-description">
           We are the students that believes in helping  BCT and BCE students succeed in the STEM field. We offer events that are aimed and designed to grow your understanding of tech and fields  related skills. <br><br> Whether you're aiming to be a Software Engineer, Data Scientist, or Project Manager, we offer a community of like-minded individuals who are eager to connect and learn with others.
-
           </p>
 
           <div class= "about-button-section">
-              <a href="about1.html" ><button class="about-button">Learn More</button></a>
+              <a href="about.html" ><button class="about-button">Learn More</button></a>
           </div>
       </div>
   
@@ -402,13 +403,11 @@ Society Club SECTION  -->
 
       <div class="events-main-content">
           <p class="events-section-title">Events</p>
-
           <p class="events-section-description">
-              Interested in learning Python, CSS/HTML/JS, or Swift AutoCAD,CSI_SAP,ETABS,Revit,SWDTM,Sketchup,HEC-RAS. <br> we are the club for you! We offer workshops for each of these programming languages and more, including Networking and Technical interview and workshops. Whether you are a complete beginner or an advanced programmer, come join us at any of our events.
-              <br>
+           Interested in learning Python, CSS/HTML/JS, or Swift? Then we are the club for you! We offer workshops for each of these programming languages and more, including Networking and Technical interview prep workshops. Whether you are a complete beginner or an advanced programmer, come join us at any of our events.
+            <br>	
 
-          </p>
-
+        </p>
           <div class= "events-button-section">
               <a href="events.html"><button class="events-button">Browse Events</button></a>
           </div>
@@ -422,13 +421,11 @@ Society Club SECTION  -->
   <div class="resources-flex-container" >
       <div class="resources-main-content">
           <p class="resources-section-title">Resources</p>
-
           <p class="resources-section-description">
-              Are you not sure where to start or where to look for resources? We compiled a bunch of resources that we believe are best suited to help you out in this endeavor. These resources include information on Computer and Civil engineering classes at Far western university, Data Science, Web Development, getting started on a new language, and much more.
-          </p>
-
+       Are you not sure where to start or where to look for resources? We compiled a bunch of resources that we believe are best suited to help you out in this endeavor. These resources include information on Computer engineering classes at Far western university, Data Science, Web Development, getting started on a new language, and much more.
+        </p>
           <div class= "resources-button-section">
-              <a href="notes/1semister.html"><button class="resources-button">More Info</button></a>
+              <a href="#"><button class="resources-button">More Info</button></a>
           </div>
       </div>
 
@@ -438,8 +435,6 @@ Society Club SECTION  -->
   </div>
   <!-- end of resources section  -->
 
-
-   
   <!-- Collaborate Secion -->
   <div class="collaborate-flex-container" >
       <div class="collaborate-img-section">
@@ -448,11 +443,9 @@ Society Club SECTION  -->
 
       <div class="collaborate-main-content">
           <p class="collaborate-section-title">Collaborate</p>
-
-          <p class="collaborate-section-description">
-              Here at the SOES, we want to include enthusiastic students as much as we can. For that reason we’ve decided to open up supportive members positions on our board to get fellow members more engaged with the society and, hopefully one day, into the Executive position. Hurry up! and checkout our open positions and apply.
-          </p>
-
+           <p class="collaborate-section-description">
+             Here at the SOES, we want to include as many students as we can. For that reason we’ve decided to open up supportive members positions on our board to get fellow members more engaged with the club and, hopefully one day, into the Executive position. Come and checkout our open positions and apply.
+        </p>
           <div class= "collaborate-button-section">
               <a href="https://www.facebook.com/profile.php?id=100083543161885"><button class="collaborate-button">Learn More</button></a>
           </div>
@@ -460,7 +453,8 @@ Society Club SECTION  -->
   </div>
   <!-- end of collaborate section  -->
 
-  <hr style="height: 3px;px; width:100%; border: width 2px;; color:rgb(18, 77, 140); background-color:rgb(3, 1, 1)">
+  <hr style="height: 3px; border: width 2px; color:rgb(18, 77, 140); background-color:rgb(3, 1, 1)">
+
 
 
 
