--- a/about.html
+++ b/about.html
@@ -57,7 +57,7 @@
               <a class="nav-link " href="index.html">Home</a>
             </li>
             <li class="nav-item">
-              <a class="nav-link" href="about1.html">About SOES</a>
+              <a class="nav-link" href="about.html">About SOES</a>
             </li>
             <li class="nav-item dropdown">
               <a
