--- a/contact.html
+++ b/contact.html
@@ -374,6 +374,7 @@
 <!-- Footer starts from here -->
 <footer class="site-footer">
   <div class="container">
+    <div class="foot">
   <div class="row mb5">
     <div class="col-md-3 mb-5">
       <h2>
@@ -381,7 +382,6 @@
       </h2>
       <p>
         We aim to help every individual grow as a person and as as tech professional to feel confident in their tech skills once they graduate. On top of that, we are a community of like-minded individuals who are eager to have creative collaboration and succeed. Come join us at the SOES Society at Far western University.
-        <!-- Lorem ipsum, dolor sit amet consectetur adipisicing elit. Debitis inventore architecto eligendi sunt minus officia cum neque sequi eum, similique optio beatae quas reprehenderit itaque sapiente repellat consectetur ea explicabo? -->
       </p>
       <p>
         <a style="color: rgb(204, 255, 0); font-size: 20px; href="about1.html">Learn More SOES</a>
@@ -436,19 +436,21 @@
     </div>
   </div>
     
+  <div >
+  <div style="text-align:center ; color: black;">
+    
+        <p>
+          @ copyrights SOES FWU<i class=" fa fa-heart"></i>
+        </p>     
+   </div>
 </div> 
-<div >
-<div style="text-align:center ; color: black;">
-  
-      <p>
-        @ copyrights SOES FWU<i class=" fa fa-heart"></i>
-      </p>     
- </div>
+</div>
 </div>
 </div>
 </footer>
 </div>
 <!-- end of footer -->
+ 
  
 <!-- JS -->
 <script src="https://code.jquery.com/jquery-3.2.1.slim.min.js" integrity="sha384-KJ3o2DKtIkvYIK3UENzmM7KCkRr/rE9/Qpg6aAZGJwFDMVNA/GpGFF93hXpG5KkN" crossorigin="anonymous"></script>
