--- a/index.html
+++ b/index.html
@@ -65,7 +65,7 @@
               <a class="nav-link active" aria-current="page" href="index.html">Home</a>
             </li> -->
             <li class="nav-item">
-              <a class="nav-link" href="about.html">About SOES</a>
+              <a class="nav-link" href="about.html">About FWUSOES</a>
             </li>
             <li class="nav-item dropdown">
               <a
