--- a/index.html
+++ b/index.html
@@ -65,7 +65,7 @@
               <a class="nav-link active" aria-current="page" href="index.html">Home</a>
             </li> -->
             <li class="nav-item">
-              <a class="nav-link" href="about.html">About FWUSOES</a>
+              <a class="nav-link" href="about.html">About SOES</a>
             </li>
             <li class="nav-item dropdown">
               <a
@@ -286,7 +286,7 @@
         </div>
       </div>
     </nav>
-    <header style="background-color: rgb(156, 158, 165);">
+    <header style="background-color:  rgba(154, 154, 154, 0.644);">
       <!-- Navbar starts From here -->
 
 
@@ -451,7 +451,7 @@ Society Club SECTION  -->
         We aim to help every individual grow as a person and as as tech professional to feel confident in their tech skills once they graduate. On top of that, we are a community of like-minded individuals who are eager to have creative collaboration and succeed. Come join us at the SOES Society at Far western University.
       </p>
       <p>
-        <a style="color: rgb(204, 255, 0); font-size: 20px; href="about1.html">Learn More SOES</a>
+        <a style="color: rgb(0, 255, 60); font-size: 20px; href="about1.html">Learn More SOES</a>
       </p>
     </div>
     <div class="col-md-3 mb-5">
@@ -482,11 +482,11 @@ Society Club SECTION  -->
       <h2>Quick Links</h2>
       <ul 
        class="list-unstyled ">
-        <li><a style="color: red; font-size: 20px;"  href="about1.html">About us</a></li>
-        <li><a style="color: red; font-size: 20px;"   href="notes/1semister.html">Notes</a></li>
-        <li><a style="color: red; font-size: 20px;"   href="fwneng.com">FWUeng</a></li>
-        <li><a style="color: red; font-size: 20px;"   href="https://www.facebook.com/profile.php?id=100083543161885">FB portal</a></li>
-        <li><a style="color: red; font-size: 20px;"   href="#">INSTA portal</a></li>
+        <li><a style=" color: rgb(0, 0, 0); font-size: 20px;"  href="about1.html">About us</a></li>
+        <li><a style="color: rgb(0, 0, 0); font-size: 20px;"   href="notes/1semister.html">Notes</a></li>
+        <li><a style="color: rgb(1, 1, 1); font-size: 20px;"   href="fwneng.com">FWUeng</a></li>
+        <li><a style="color: rgb(6, 5, 5); font-size: 20px;"   href="https://www.facebook.com/profile.php?id=100083543161885">FB portal</a></li>
+        <li><a style="color: rgb(18, 15, 15); font-size: 20px;"   href="#">INSTA portal</a></li>
       </ul>
     </div>
 
