commit for rotational function

--- a/index.html
+++ b/index.html
@@ -347,7 +347,7 @@ Society Club SECTION  -->
           <!-- <a href="https://discord.gg/fJZKErEnPa"><i class="fab fa-discord fa-lg desc" style="color: #5865F2;"></i></a> -->
       </div>
       <div class="sidebar">
-          <img width="100px" height="100px" src="images/logo1.jpeg" alt="">
+          <img  src="images/logo1.png" alt="">
       </div>
   </div>
   <!-- end of welcome section -->
